--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ replit = "^2.0.0"
 flask = "^1.1.2"
 youtube-dl = "^2020.12.14"
 PyNaCl = "^1.4.0"
+ffmpeg = "^1.4"
 
 [tool.poetry.dev-dependencies]
 
