--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ PyNaCl = "^1.4.0"
 ffmpeg = "^1.4"
 pandas = "^1.2.2"
 tweepy = "^3.10.0"
+cryptocompare = "^0.7.5"
 
 [tool.poetry.dev-dependencies]
 
