--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,6 @@ authors = ["repl.it user <replituser@example.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-discord = "^1.0.1"
 asana = "^0.10.3"
 replit = "^2.0.0"
 youtube-dl = "^2020.12.14"
@@ -16,6 +15,7 @@ pandas = "^1.2.2"
 tweepy = "^3.10.0"
 cryptocompare = "^0.7.5"
 flask = "^1.1.2"
+"discord.py" = "^1.7.1"
 
 [tool.poetry.dev-dependencies]
 
