--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ cryptocompare = "^0.7.5"
 flask = "^1.1.2"
 "discord.py" = "^1.7.1"
 python-weather = "^0.2.3"
+coinbase = "^2.1.0"
 
 [tool.poetry.dev-dependencies]
 
